Change case 2 threshold